--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@shapediver/viewer": "^2.0.7",
+    "@shapediver/viewer.features.interaction": "^2.1.1",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
