--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@shapediver/viewer": "^2.0.7",
     "@shapediver/viewer.features.interaction": "^2.1.1",
     "next": "12.2.3",
+    "next-sanity": "^0.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13"
