--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "set PORT=4000 && next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "set PORT=4000 && next start",
     "lint": "next lint"
   },
