--- a/package.json
+++ b/package.json
@@ -1,24 +1,85 @@
 {
-  "name": "seb-test-next",
-  "version": "0.1.0",
+  "name": "vite-seb-test",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "set PORT=4000 && next dev",
-    "build": "next build && next export",
-    "start": "set PORT=4000 && next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@shapediver/viewer": "^2.0.7",
-    "@shapediver/viewer.features.interaction": "^2.1.1",
-    "next": "12.2.3",
-    "next-sanity": "^0.6.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "reflect-metadata": "^0.1.13"
+    "@emotion/react": "^11.13.3",
+    "@mantine/charts": "^7.12.2",
+    "@mantine/core": "^7.12.2",
+    "@mantine/hooks": "^7.12.2",
+    "@mantine/notifications": "^7.12.2",
+    "@sentry/react": "^8.30.0",
+    "@sentry/vite-plugin": "^2.22.4",
+    "@shapediver/api.geometry-api-dto-v2": "^1.24.0",
+    "@shapediver/sdk.geometry-api-sdk-v2": "^1.12.2",
+    "@shapediver/sdk.platform-api-sdk-v1": "^2.27.1",
+    "@shapediver/viewer.features.attribute-visualization": "3.8.12",
+    "@shapediver/viewer.features.drawing-tools": "3.8.12",
+    "@shapediver/viewer.features.gumball": "3.8.12",
+    "@shapediver/viewer.features.interaction": "3.8.12",
+    "@shapediver/viewer.session": "3.8.12",
+    "@shapediver/viewer.utils.mime-type": "~1.1.0",
+    "@shapediver/viewer.viewport": "3.8.12",
+    "@tabler/icons-react": "3.17.0",
+    "gl-matrix": "^3.4.3",
+    "immer": "^10.1.1",
+    "langfuse": "^3.35.3",
+    "lodash": "^4.17.21",
+    "openai": "^4.85.4",
+    "path": "^0.12.7",
+    "plausible-tracker": "^0.3.9",
+    "post-robot": "^8.0.32",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-infinite-scroll-hook": "^5.0.1",
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "6.26.2",
+    "react-scripts": "5.0.1",
+    "remark-directive": "^3.0.0",
+    "remark-gfm": "^4.0.0",
+    "unist-util-visit": "^5.0.0",
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3"
+    "@eslint/js": "^9.21.0",
+    "@sentry/cli": "^2.36.6",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^22.13.10",
+    "@types/post-robot": "^10.0.6",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.24.1",
+    "vite": "^6.2.0",
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "web-vitals": "^4.2.4"
   }
 }
