--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mantine/charts": "^7.12.2",
     "@mantine/core": "^7.12.2",
     "@mantine/hooks": "^7.12.2",
     "@mantine/notifications": "^7.12.2",
+    "@mui/material": "^6.4.7",
+    "@mui/types": "^7.2.21",
     "@sentry/react": "^8.30.0",
     "@sentry/vite-plugin": "^2.22.4",
     "@shapediver/api.geometry-api-dto-v2": "^1.24.0",
